--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <nav class="nav" aria-label="Hauptnavigation">
         <a class="nav-link" href="home.html">Home</a>
-        <a class="nav-link" href="main_kategorie_group.html">Main Kategorien</a>
+        <a class="nav-link" href="kategorie.html">Main Kategorien</a>
         <a class="nav-link" href="main_datenbank.html">Main Datenbank</a>
         <button id="themeToggle" class="btn btn-ghost" aria-label="Darstellung wechseln" title="Hell/Dunkel umschalten">🌓</button>
       </nav>
@@ -89,7 +89,7 @@
             <p class="card-text">Hauptgruppen für eine klare Navigation.</p>
           </div>
           <div class="card-actions">
-            <a class="btn btn-outline" href="main_kategorie_group.html">Daten ansehen ➜</a>
+            <a class="btn btn-outline" href="kategorie.html">Daten ansehen ➜</a>
           </div>
         </li>
 
